--- a/strapAnimal/style.css
+++ b/strapAnimal/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: rgb(65, 122, 65);
     font-family: sans-serif;
@@ -23,6 +29,15 @@ body {
 
 .heading-group h2 {
     font-size: 3rem;
+}
+
+.content {
+    margin-bottom: 100px;
+}
+
+.navbar.scrolled {
+    background-color: red;
+    transition: all .75s;
 }
 
 @media only screen and (max-width: 1100px) {
